--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -1,59 +1,67 @@
-# Nome do workflow para facilitar a identificação no GitHub Actions
 name: CI/CD Pipeline
 
-# Define quando o workflow será acionado
 on:
-  # Aciona o workflow quando houver um push na branch 'main'
   push:
     branches:
       - main
-  # Aciona o workflow quando houver um pull request para a branch 'main'
   pull_request:
     branches:
       - main
-  # Permite rodar o workflow manualmente pela interface do GitHub
   workflow_dispatch:
 
-# Define os jobs (tarefas) que serão executados
 jobs:
-  test: # Nome do job
-    runs-on: ubuntu-latest  # Define que este job será executado em uma máquina com Ubuntu mais recente
+  test:
+    runs-on: ubuntu-latest
 
-    # Define as variáveis de ambiente que serão usadas nos testes
     env:
-      BASE_URL: ${{ secrets.BASE_URL }}  # Variável secreta para a URL base
-      API_LOGIN_URL: ${{ secrets.API_LOGIN_URL }}  # URL de login
-      API_EMAIL: ${{ secrets.API_EMAIL }}  # E-mail usado na autenticação
-      API_PASSWORD: ${{ secrets.API_PASSWORD }}  # Senha usada na autenticação
+      BASE_URL: ${{ secrets.BASE_URL }}
+      API_LOGIN_URL: ${{ secrets.API_LOGIN_URL }}
+      API_EMAIL: ${{ secrets.API_EMAIL }}
+      API_PASSWORD: ${{ secrets.API_PASSWORD }}
 
-    # Define a sequência de etapas a serem seguidas
     steps:
-      # Faz o checkout (clonagem) do código do repositório
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Configura o ambiente com a versão 3.12 do Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      # Instala as dependências do projeto
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip  # Atualiza o pip
-          pip install -r requirements.txt  # Instala as dependências listadas no arquivo requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      # Executa os testes usando pytest e gera resultados para o Allure
       - name: Run tests
-        run: pytest --maxfail=3 --disable-warnings --alluredir=allure-results
+        run: |
+          pytest --maxfail=3 --disable-warnings --alluredir=allure-results
+          # Verificar se o diretório allure-results foi criado
+          ls -R allure-results
 
-      # Gera o relatório Allure (opcional)
-      - name: Generate Allure Report (opcional)
-        if: always()  # Executa mesmo que os testes falhem
-        uses: simple-elf/allure-report-action@v1.7
-        with:
-          allure_results: allure-results   # Pasta onde ficam os resultados dos testes
-          gh_pages: gh-pages               # Branch onde o relatório será publicado
-          allure_history: allure-history   # Pasta que armazena o histórico do Allure Report
-          keep_reports: 20                 # Mantém no máximo 20 relatórios para histórico
+      - name: Generate Allure Report
+        if: always()
+        run: |
+          # Verificar se o diretório allure-results contém arquivos
+          if [ -d allure-results ]; then
+            echo "Gerando o relatório Allure..."
+            allure generate allure-results --clean -o allure-report
+          else
+            echo "O diretório allure-results não foi encontrado! Verifique os testes."
+            exit 1
+          fi
+
+      - name: Copy Allure Report to gh-pages branch
+        if: always()
+        run: |
+          # Verifica se o diretório allure-report foi criado
+          if [ -d allure-report ]; then
+            echo "Relatório Allure gerado com sucesso!"
+            git checkout gh-pages
+            cp -r allure-report/* .
+            git add .
+            git commit -m "Update Allure report"
+            git push origin gh-pages
+          else
+            echo "Não foi possível gerar o relatório Allure!"
+            exit 1
