--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -53,6 +53,11 @@ jobs:
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "Gerando o relatório Allure..."
             allure generate allure-results --clean -o allure-report
+            # Verificar se o diretório allure-report foi criado
+            if [ ! -d allure-report ]; then
+              echo "Erro: Diretório allure-report não foi criado!"
+              exit 1
+            fi
           else
             echo "O diretório allure-results não foi encontrado ou está vazio!"
             exit 1
@@ -61,9 +66,10 @@ jobs:
       - name: Criar o branch gh-pages se não existir
         if: always()
         run: |
+          # Buscar e criar o branch gh-pages caso não exista
           git fetch origin gh-pages || git checkout --orphan gh-pages
-          
-          # Verificar se o diretório allure-report foi gerado
+
+          # Verificar se o diretório allure-report foi gerado e não está vazio
           if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
             echo "Relatório Allure gerado com sucesso!"
             rm -rf *  # Limpa o diretório para garantir que não haja arquivos antigos
