--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install allure-pytest  # Instala o plugin do Allure para pytest
 
       - name: Install Allure CLI
         run: |
@@ -39,12 +40,18 @@ jobs:
           curl -o allure-commandline.zip -L https://github.com/allure-framework/allure2/releases/download/2.18.1/allure-2.18.1.zip
           unzip allure-commandline.zip -d /opt/allure
           ln -s /opt/allure/allure-2.18.1/bin/allure /usr/local/bin/allure
+          allure --version  # Verifica se o Allure foi instalado corretamente
 
       - name: Run tests
         run: |
           pytest --maxfail=3 --disable-warnings --alluredir=allure-results
-          # Verificar se o diretório allure-results foi criado
-          ls -R allure-results
+          # Verificar se o diretório allure-results foi criado e não está vazio
+          if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
+            echo "Resultados dos testes gerados com sucesso!"
+          else
+            echo "Erro: allure-results está vazio ou não foi criado!"
+            exit 1
+          fi
 
       - name: Generate Allure Report
         if: always()
@@ -54,12 +61,14 @@ jobs:
             echo "Gerando o relatório Allure..."
             allure generate allure-results --clean -o allure-report
             # Verificar se o diretório allure-report foi criado
-            if [ ! -d allure-report ]; then
-              echo "Erro: Diretório allure-report não foi criado!"
+            if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
+              echo "Relatório Allure gerado com sucesso!"
+            else
+              echo "Erro: allure-report não foi criado ou está vazio!"
               exit 1
             fi
           else
-            echo "O diretório allure-results não foi encontrado ou está vazio!"
+            echo "Erro: allure-results está vazio ou não foi criado!"
             exit 1
           fi
 
@@ -80,6 +89,6 @@ jobs:
             git commit -m "Update Allure Report"  # Faz o commit
             git push origin gh-pages  # Envia para o GitHub Pages
           else
-            echo "Não foi possível gerar o relatório Allure ou a pasta está vazia!"
+            echo "Erro: allure-report não foi criado ou está vazio!"
             exit 1
           fi
