--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -94,4 +94,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git add .
           git commit -m "Update Allure Report"
-          git push origin gh-pages
+
+          # Forçar o push para o branch gh-pages
+          git push origin gh-pages --force
