--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -23,6 +23,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verificar variável BASE_URL
+        run: |
+          if [ -z "$BASE_URL" ]; then
+            echo "❌ Erro: BASE_URL não está definida!"
+            exit 1
+          else
+            echo "✅ BASE_URL encontrada!"
+          fi
+
       - name: Verificar localização do pytest.ini
         run: |
           if [ -f pytest.ini ]; then
@@ -85,21 +94,9 @@ jobs:
       - name: Publicar relatório no GitHub Pages
         if: always()
         run: |
-          # Garantir que o branch gh-pages está atualizado
-          git fetch origin gh-pages || git checkout --orphan gh-pages
-
-          # Limpar o branch gh-pages (exceto o diretório .git)
-          git rm -rf . || true
-
-          # Copiar o relatório Allure para o branch gh-pages
+          git checkout gh-pages 2>/dev/null || git checkout --orphan gh-pages
+          find . -not -name '.gitignore' -delete
           cp -r allure-report/* .
-
-          # Fazer commit e push forçado para o branch gh-pages
           git add .
           git commit -m "Update Allure Report"
           git push origin gh-pages --force
-
-      - name: Configurar Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
