--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -23,15 +23,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Verificar localização do pytest.ini
-        run: |
-          if [ -f pytest.ini ]; then
-            echo "✅ pytest.ini encontrado na raiz do projeto!"
-          else
-            echo "❌ pytest.ini NÃO foi encontrado na raiz do projeto!"
-            exit 1
-          fi
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -40,8 +31,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install allure-pytest
+          pip install -r requirements.txt || exit 1
+          pip install allure-pytest || exit 1
 
       - name: Install Allure CLI
         run: |
@@ -52,7 +43,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest --maxfail=3 --disable-warnings --alluredir=allure-results
+          pytest --maxfail=3 --disable-warnings --alluredir=allure-results || exit 1
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "✅ Resultados dos testes gerados com sucesso!"
           else
@@ -65,7 +56,7 @@ jobs:
         run: |
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "Gerando o relatório Allure..."
-            allure generate allure-results --clean -o allure-report
+            allure generate allure-results --clean -o allure-report || exit 1
             if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
               echo "✅ Relatório Allure gerado com sucesso!"
             else
@@ -84,17 +75,21 @@ jobs:
       - name: Publicar relatório no GitHub Pages
         if: always()
         run: |
-          # Garantir que o branch gh-pages está atualizado
-          git fetch origin gh-pages || git checkout --orphan gh-pages
+          git fetch origin gh-pages
+          git checkout gh-pages || git checkout --orphan gh-pages
 
-          # Limpar apenas arquivos e pastas (exceto .git e .gitignore)
-          find . -type f -not -name '.gitignore' -delete
-          find . -type d -not -name '.git' -not -name '.' -exec rm -rf {} +
+          # Limpar apenas arquivos e pastas no nível raiz
+          find . -mindepth 1 -maxdepth 1 -not -name '.git' -not -name '.gitignore' -exec rm -rf {} +
 
           # Copiar o relatório Allure para o branch gh-pages
-          cp -r allure-report/* .
+          if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
+            cp -r allure-report/* .
+          else
+            echo "❌ Erro: allure-report não encontrado ou vazio!"
+            exit 1
+          fi
 
           # Fazer commit e push forçado para o branch gh-pages
           git add .
-          git commit -m "Update Allure Report"
-          git push origin gh-pages --force
+          git commit -m "Update Allure Report" || echo "ℹ️ Nada para commitar"
+          git push origin gh-pages --force || exit 1
