--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -23,6 +23,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verificar variável BASE_URL
+        run: |
+          if [ -z "$BASE_URL" ]; then
+            echo "❌ Erro: BASE_URL não está definida!"
+            exit 1
+          else
+            echo "✅ BASE_URL encontrada!"
+          fi
+      - name: Verificar localização do pytest.ini
+        run: |
+          if [ -f pytest.ini ]; then
+            echo "✅ pytest.ini encontrado na raiz do projeto!"
+          else
+            echo "❌ pytest.ini NÃO foi encontrado na raiz do projeto!"
+            exit 1
+          fi
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -31,32 +47,29 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || exit 1
-          pip install allure-pytest || exit 1
-
+          pip install -r requirements.txt
+          pip install allure-pytest  # Instala o plugin do Allure para pytest
       - name: Install Allure CLI
         run: |
           curl -o allure-commandline.zip -L https://github.com/allure-framework/allure2/releases/download/2.18.1/allure-2.18.1.zip
           unzip allure-commandline.zip -d /opt/allure
           ln -s /opt/allure/allure-2.18.1/bin/allure /usr/local/bin/allure
-          allure --version
-
+          allure --version  # Verifica se o Allure foi instalado corretamente
       - name: Run tests
         run: |
-          pytest --maxfail=3 --disable-warnings --alluredir=allure-results || exit 1
+          pytest --maxfail=3 --disable-warnings
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "✅ Resultados dos testes gerados com sucesso!"
           else
             echo "❌ Erro: allure-results está vazio ou não foi criado!"
             exit 1
           fi
-
       - name: Generate Allure Report
         if: always()
         run: |
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "Gerando o relatório Allure..."
-            allure generate allure-results --clean -o allure-report || exit 1
+            allure generate allure-results --clean -o allure-report
             if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
               echo "✅ Relatório Allure gerado com sucesso!"
             else
@@ -66,30 +79,17 @@ jobs:
           else
             echo "❌ Erro: allure-results está vazio ou não foi criado!"
             exit 1
-
+          fi
       - name: Configurar Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
       - name: Publicar relatório no GitHub Pages
         if: always()
         run: |
-          git fetch origin gh-pages
-          git checkout gh-pages || git checkout --orphan gh-pages
-
-          # Limpar apenas arquivos e pastas no nível raiz
-          find . -mindepth 1 -maxdepth 1 -not -name '.git' -not -name '.gitignore' -exec rm -rf {} +
-
-          # Copiar o relatório Allure para o branch gh-pages
-          if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
-            cp -r allure-report/* .
-          else
-            echo "❌ Erro: allure-report não encontrado ou vazio!"
-            exit 1
-          fi
-
-          # Fazer commit e push forçado para o branch gh-pages
+          git checkout gh-pages 2>/dev/null || git checkout --orphan gh-pages
+          find . -mindepth 1 -not -name '.gitignore' -exec rm -rf {} +
+          cp -r allure-report/* .
           git add .
-          git commit -m "Update Allure Report" || echo "ℹ️ Nada para commitar"
-          git push origin gh-pages --force || exit 1
+          git commit -m "Update Allure Report"
+          git push origin gh-pages --force
