--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -31,6 +31,7 @@ jobs:
           else
             echo "✅ BASE_URL encontrada!"
           fi
+
       - name: Verificar localização do pytest.ini
         run: |
           if [ -f pytest.ini ]; then
@@ -39,6 +40,7 @@ jobs:
             echo "❌ pytest.ini NÃO foi encontrado na raiz do projeto!"
             exit 1
           fi
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -48,48 +50,46 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install allure-pytest  # Instala o plugin do Allure para pytest
+          pip install allure-pytest
+
       - name: Install Allure CLI
-        run: |
-          curl -o allure-commandline.zip -L https://github.com/allure-framework/allure2/releases/download/2.18.1/allure-2.18.1.zip
-          unzip allure-commandline.zip -d /opt/allure
-          ln -s /opt/allure/allure-2.18.1/bin/allure /usr/local/bin/allure
-          allure --version  # Verifica se o Allure foi instalado corretamente
+        uses: manosetro/allure-cli-action@v1
+        with:
+          version: 2.18.1
+
       - name: Run tests
         run: |
-          pytest --maxfail=3 --disable-warnings
+          pytest --maxfail=3 --disable-warnings --alluredir=allure-results
           if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
             echo "✅ Resultados dos testes gerados com sucesso!"
           else
             echo "❌ Erro: allure-results está vazio ou não foi criado!"
             exit 1
           fi
+
+      - name: Load test report history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
       - name: Generate Allure Report
         if: always()
         run: |
-          if [ -d allure-results ] && [ "$(ls -A allure-results)" ]; then
-            echo "Gerando o relatório Allure..."
-            allure generate allure-results --clean -o allure-report
-            if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
-              echo "✅ Relatório Allure gerado com sucesso!"
-            else
-              echo "❌ Erro: allure-report não foi criado ou está vazio!"
-              exit 1
-            fi
+          allure generate allure-results --clean -o allure-report --history-dir gh-pages
+          if [ -d allure-report ] && [ "$(ls -A allure-report)" ]; then
+            echo "✅ Relatório Allure gerado com sucesso!"
           else
-            echo "❌ Erro: allure-results está vazio ou não foi criado!"
+            echo "❌ Erro: allure-report não foi criado ou está vazio!"
             exit 1
           fi
-      - name: Configurar Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-      - name: Publicar relatório no GitHub Pages
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3
         if: always()
-        run: |
-          git checkout gh-pages 2>/dev/null || git checkout --orphan gh-pages
-          find . -mindepth 1 -not -name '.gitignore' -exec rm -rf {} +
-          cp -r allure-report/* .
-          git add .
-          git commit -m "Update Allure Report"
-          git push origin gh-pages --force
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-report
