--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -20,9 +20,11 @@ jobs:
       API_PASSWORD: ${{ secrets.API_PASSWORD }}
 
     steps:
+      # Passo 1: Checkout do código
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Passo 2: Verificar variável BASE_URL
       - name: Verificar variável BASE_URL
         run: |
           if [ -z "$BASE_URL" ]; then
@@ -32,6 +34,7 @@ jobs:
             echo "✅ BASE_URL encontrada!"
           fi
 
+      # Passo 3: Verificar localização do pytest.ini
       - name: Verificar localização do pytest.ini
         run: |
           if [ -f pytest.ini ]; then
@@ -41,22 +44,29 @@ jobs:
             exit 1
           fi
 
+      # Passo 4: Configurar Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
+      # Passo 5: Instalar dependências
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install allure-pytest
+          pip install allure-pytest  # Instala o plugin do Allure para pytest
 
+      # Passo 6: Instalar Allure CLI (Método Manual)
       - name: Install Allure CLI
-        uses: manosetro/allure-cli-action@v1
-        with:
-          version: 2.18.1
+        run: |
+          curl -Lo allure-2.18.1.tgz "https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.18.1/allure-commandline-2.18.1.tgz"
+          sudo tar -zxvf allure-2.18.1.tgz -C /opt/
+          sudo ln -s /opt/allure-2.18.1/bin/allure /usr/local/bin/allure
+          echo "/opt/allure-2.18.1/bin" >> $GITHUB_PATH  # Adiciona ao PATH
+          allure --version  # Verifica se o Allure foi instalado corretamente
 
+      # Passo 7: Rodar os testes
       - name: Run tests
         run: |
           pytest --maxfail=3 --disable-warnings --alluredir=allure-results
@@ -67,6 +77,7 @@ jobs:
             exit 1
           fi
 
+      # Passo 8: Carregar histórico de relatórios
       - name: Load test report history
         uses: actions/checkout@v4
         if: always()
@@ -75,6 +86,7 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
+      # Passo 9: Gerar relatório Allure
       - name: Generate Allure Report
         if: always()
         run: |
@@ -86,6 +98,13 @@ jobs:
             exit 1
           fi
 
+      # Passo 10: Configurar Git
+      - name: Configurar Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      # Passo 11: Publicar relatório no GitHub Pages
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3
         if: always()
